--- a/.gitignore
+++ b/.gitignore
@@ -230,3 +230,10 @@ GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
 /.vs
+/.vs/DOT.NET.Mentoring.Program.Advanced.2023.Q3/v17/.wsuo
+/.vs/VSWorkspaceState.json
+/Service.Catalog/.vs/Service.Catalog/FileContentIndex/0be39947-34dd-429a-85ba-86fd6e030fa9.vsidx
+/Service.Catalog/.vs/Service.Catalog/FileContentIndex/0e87e12b-eb83-4e96-b7d6-1863893173f0.vsidx
+/Service.Catalog/.vs/Service.Catalog/FileContentIndex/630a95cc-c0f6-4422-a45d-13e6ac20995e.vsidx
+/Service.Catalog/.vs/Service.Catalog/FileContentIndex/dcebf8b3-ef2e-4893-971c-1ca7f53c354e.vsidx
+/Service.Catalog/.vs/Service.Catalog/FileContentIndex/ec7ceeac-a672-48b0-8bea-2cc23fb752a8.vsidx
