--- a/.gitignore
+++ b/.gitignore
@@ -237,3 +237,4 @@ ModelManifest.xml
 /Service.Catalog/.vs/Service.Catalog/FileContentIndex/630a95cc-c0f6-4422-a45d-13e6ac20995e.vsidx
 /Service.Catalog/.vs/Service.Catalog/FileContentIndex/dcebf8b3-ef2e-4893-971c-1ca7f53c354e.vsidx
 /Service.Catalog/.vs/Service.Catalog/FileContentIndex/ec7ceeac-a672-48b0-8bea-2cc23fb752a8.vsidx
+/Service.Catalog/.vs/Service.Catalog/v17/.suo
