--- a/Service.Catalog/Service.Catalog.Infrastructure/Service.Catalog.Infrastructure.csproj
+++ b/Service.Catalog/Service.Catalog.Infrastructure/Service.Catalog.Infrastructure.csproj
@@ -6,15 +6,17 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-	
-	<ItemGroup>
-		<InternalsVisibleTo Include="$(AssemblyName).WebApi" />
-		<InternalsVisibleTo Include="DynamicProxyGenAssembly2" />
-	</ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Service.Catalog.DAL\Service.Catalog.DAL.csproj" />
-	  
+    <PackageReference Include="MongoDB.Driver" Version="2.22.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Service.Catalog.Domain\Service.Catalog.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\" />
   </ItemGroup>
 
 </Project>
