--- a/Service.Catalog/Service.Catalog.WebApi/Service.Catalog.WebApi.csproj
+++ b/Service.Catalog/Service.Catalog.WebApi/Service.Catalog.WebApi.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Service.Catalog.BLL\Service.Catalog.BLL.csproj" />
+    <ProjectReference Include="..\Service.Catalog.Application\Service.Catalog.Application.csproj" />
   </ItemGroup>
 
 </Project>
