--- a/Service.Carting/Service.Carting.WebApi/Properties/launchSettings.json
+++ b/Service.Carting/Service.Carting.WebApi/Properties/launchSettings.json
@@ -4,17 +4,17 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:28044",
-      "sslPort": 44313
+      "applicationUrl": "http://localhost:47077",
+      "sslPort": 44362
     }
   },
   "profiles": {
-    "Service.Carting.WebApi": {
+    "Service.Catalog.WebApi": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
-      "applicationUrl": "https://localhost:7011;http://localhost:5268",
+      "launchUrl": "swagger",
+      "applicationUrl": "https://localhost:7261;http://localhost:5245",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -22,7 +22,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
