--- a/Service.Carting/Service.Carting.WebApi/Service.Carting.WebApi.csproj
+++ b/Service.Carting/Service.Carting.WebApi/Service.Carting.WebApi.csproj
@@ -4,7 +4,17 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+	<GenerateDocumentationFile>true</GenerateDocumentationFile>
+	<IncludeOpenAPIAnalyzers>true</IncludeOpenAPIAnalyzers>
+	<NoWarn>1591</NoWarn>
   </PropertyGroup>
+
+  <ItemGroup>
+  	<PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.1.0" />
+  	<PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.1.0" />
+  	<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  	<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Service.Carting.Application\Service.Carting.Application.csproj" />
