--- a/Service.Carting/Service.Carting.Application/Service.Carting.Application.csproj
+++ b/Service.Carting/Service.Carting.Application/Service.Carting.Application.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.17.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Service.Carting.Domain\Service.Carting.Domain.csproj" />
     <ProjectReference Include="..\Service.Carting.Infrastructure\Service.Carting.Infrastructure.csproj" />
   </ItemGroup>
