--- a/Service.Carting/Service.Carting.WebApi/Service.Carting.WebApi.csproj
+++ b/Service.Carting/Service.Carting.WebApi/Service.Carting.WebApi.csproj
@@ -10,6 +10,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+  	<PackageReference Include="Microsoft.ApplicationInsights" Version="2.22.0" />
+  	<PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.22.0" />
   	<PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.1.0" />
   	<PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.1.0" />
   	<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
