--- a/Service.Catalog/Service.Catalog.WebApi/Service.Catalog.WebApi.csproj
+++ b/Service.Catalog/Service.Catalog.WebApi/Service.Catalog.WebApi.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="IdentityServer4" Version="4.1.2" />
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.22.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.26" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
