--- a/Service.Catalog/Service.Catalog.WebApi/appsettings.Development.json
+++ b/Service.Catalog/Service.Catalog.WebApi/appsettings.Development.json
@@ -1,4 +1,10 @@
 {
+  "ApplicationInsights": {
+    "ConnectionString": "InstrumentationKey=92be1ac5-2811-4001-964f-4167401cdb40;IngestionEndpoint=https://polandcentral-0.in.applicationinsights.azure.com/;LiveEndpoint=https://polandcentral.livediagnostics.monitor.azure.com/",
+    "samplingSettings": {
+      "isEnabled": true
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
