--- a/Service.Catalog/Service.Catalog.WebApi/appsettings.json
+++ b/Service.Catalog/Service.Catalog.WebApi/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ApplicationInsights": {
+    "ConnectionString": "InstrumentationKey=92be1ac5-2811-4001-964f-4167401cdb40;IngestionEndpoint=https://polandcentral-0.in.applicationinsights.azure.com/;LiveEndpoint=https://polandcentral.livediagnostics.monitor.azure.com/",
+    "LogLevel": {
+      "Default": "Information"
+    },
+    "samplingSettings": {
+      "isEnabled": true,
+      "excludedTypes": "Request"
+    }
+  },
   "AllowedHosts": "*"
 }
