--- a/Service.Carting/Service.Carting.WebApi/appsettings.Development.json
+++ b/Service.Carting/Service.Carting.WebApi/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ApplicationInsights": {
-    "ConnectionString": "InstrumentationKey=92be1ac5-2811-4001-964f-4167401cdb40;IngestionEndpoint=https://polandcentral-0.in.applicationinsights.azure.com/;LiveEndpoint=https://polandcentral.livediagnostics.monitor.azure.com/",
+    "ConnectionString": "InstrumentationKey=*;IngestionEndpoint=https://polandcentral-0.in.applicationinsights.azure.com/;LiveEndpoint=https://polandcentral.livediagnostics.monitor.azure.com/",
     "LogLevel": {
       "Default": "Information"
     },
